--- a/res/layout/watch.xml
+++ b/res/layout/watch.xml
@@ -1,11 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
- android:orientation="vertical" android:layout_width="fill_parent"
- android:layout_height="fill_parent">
-
-
-<TextView android:text="Show Name" android:id="@+id/sName" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-<TextView android:text="Episode Number" android:id="@+id/eNum" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-<TextView android:text="Episode Name" android:id="@+id/eName" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-<TextView android:text="Location" android:id="@+id/loc" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+	android:orientation="vertical" android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+	<LinearLayout android:layout_height="wrap_content"
+		android:id="@+id/LL_Text" android:layout_width="wrap_content"
+		android:orientation="horizontal" android:layout_marginTop="10px"
+		android:layout_marginBottom="10px" android:gravity="center">
+		<TextView android:layout_height="wrap_content" android:id="@+id/sName"
+			android:layout_width="wrap_content" android:text="Show Name"
+			android:layout_marginLeft="3px"></TextView>
+		<TextView android:layout_height="wrap_content" android:id="@+id/eNum"
+			android:layout_width="wrap_content" android:text="Episode Number"
+			android:layout_marginLeft="10px"></TextView>
+	</LinearLayout>
+	<LinearLayout android:layout_height="wrap_content"
+		android:id="@+id/LL_buttons_first" android:layout_width="fill_parent">
+		<Button android:text="Rewind" android:id="@+id/rewind"
+			android:layout_width="wrap_content" android:layout_height="fill_parent"></Button>
+		<ToggleButton android:id="@+id/playpause" android:textOn="Stop" android:textOff="Play"
+			android:layout_height="fill_parent" android:layout_width="wrap_content"
+			android:text="@+id/ToggleButton01" android:layout_gravity="center"></ToggleButton>
+		<Button android:text="Fast F" android:layout_gravity="fill"
+			android:id="@+id/foward" android:layout_height="fill_parent"
+			android:layout_width="wrap_content"></Button>
+	</LinearLayout>
+	<LinearLayout android:id="@+id/LL_buttons_second"
+		android:layout_width="fill_parent" android:layout_height="wrap_content">
+		<Button android:text="Pause" android:id="@+id/pause"
+			android:layout_width="wrap_content" android:layout_height="fill_parent"></Button>
+		<ToggleButton android:id="@+id/fullscreen" android:textOn="Normal Size" android:textOff="FullScreen"
+			android:layout_height="fill_parent" android:layout_width="wrap_content"
+			android:text="@+id/ToggleButton01" android:layout_gravity="center"
+			android:gravity="center|center_vertical"></ToggleButton>
+		<Button android:text="Mute" android:id="@+id/mute"
+			android:layout_width="wrap_content" android:layout_height="fill_parent"
+			android:layout_gravity="fill"></Button>
+	</LinearLayout>
+	<Button android:text="Quit" android:id="@+id/quit"
+		android:layout_width="fill_parent" android:layout_height="fill_parent"
+		android:layout_gravity="fill"></Button>
 </LinearLayout>
