--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,6 +5,7 @@
 <TextView android:layout_height="wrap_content" android:textStyle="bold" android:layout_width="fill_parent" android:layout_marginLeft="25px" android:layout_marginBottom="10px" android:layout_marginTop="15px" android:id="@+id/Control" android:text="Control:"></TextView>
 <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/music" android:text="Music"></Button>
 <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/torrent" android:text="Show List"></Button>
-
+<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/shows" android:text="Upcoming Shows"></Button>
+    
 
 </LinearLayout>
