--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,36 +4,9 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/Control"
+   <ListView
+        android:id="@android:id/list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10px"
-        android:layout_marginLeft="25px"
-        android:layout_marginTop="15px"
-        android:text="Control:"
-        android:textStyle="bold" >
-    </TextView>
-
-    <Button
-        android:id="@+id/music"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Music" >
-    </Button>
-
-    <Button
-        android:id="@+id/torrent"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Show List" >
-    </Button>
-
-    <Button
-        android:id="@+id/shows"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Upcoming Shows" >
-    </Button>
-
+        android:layout_height="wrap_content" >
+    </ListView>
 </LinearLayout>
