--- a/res/layout/upcomingshows.xml
+++ b/res/layout/upcomingshows.xml
@@ -9,7 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical|center_horizontal"
-        android:text="Upcoming Shows"
+        android:text="@+string/upcomingshows"
         android:textStyle="normal|bold" >
     </TextView>
 
