--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -4,42 +4,37 @@
     <ListPreference
         android:defaultValue="Tomoya"
         android:key="serverhostname"
-        android:summary="The host name of the Server which msDaemon runs"
-        android:title="Server Host Name" />
+        android:summary="@+string/server_host_name_summary"
+        android:title="@+string/server_host_name_title" />
 
     <EditTextPreference
         android:defaultValue="http://www.nosideholdings.com"
         android:key="serverurl"
-        android:summary="The URL of the Server which the rchip webservice is running"
-        android:title="Server URL" />
+        android:summary="@+string/server_url_summary"
+        android:title="@+string/server_url_title" />
 
     <EditTextPreference
         android:key="username"
-        android:summary="Username For JSON"
-        android:title="Username" />
+        android:summary="@+string/username_summary"
+        android:title="@+string/username" />
 
     <EditTextPreference
         android:key="password"
-        android:summary="Password For JSON"
-        android:title="Password" />
-
-    <CheckBoxPreference
-        android:key="notificationsCheck"
-        android:summary="Turn On/Off Notifications"
-        android:title="Notifications" />
+        android:summary="@+string/password_summary"
+        android:title="@+string/password" />
 
     <ListPreference
         android:defaultValue="300000"
         android:entries="@array/DelayArray"
         android:entryValues="@array/DelayValues"
         android:key="networkdelay"
-        android:summary="The delay between updates"
-        android:title="Network Delay" />
+        android:summary="@+string/network_delay_summary"
+        android:title="@+string/network_delay" />
 
     <EditTextPreference
         android:defaultValue="/mnt/raid/"
         android:key="videopath"
-        android:summary="The Path the the root of the NFS server"
-        android:title="Video Path" />
+        android:summary="@+string/video_path_summary"
+        android:title="@+string/video_path_title" />
 
 </PreferenceScreen>
